# omnimemory

./: .env.dev.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  lifelog-mvp-dev-plan.md  lifelog-mvp-prd.md
services/api/: Dockerfile  README.md  pyproject.toml
services/api/alembic/: env.py
services/api/app/: __init__.py  auth.py  cache.py  celery_app.py  config.py  google_photos.py  main.py  rag.py  recaps.py  storage.py  user_settings.py  vectorstore.py
services/api/app/agent/: __init__.py  memory_agent.py  runner.py  tools.py
services/api/app/ai/: __init__.py  geocoding.py  image_gen.py  media_understanding.py  ocr.py  prompt_manager.py  prompt_manifest.py  prompt_templates.py  prompts.py  transcription.py  usage.py  vlm.py
services/api/app/chat/: __init__.py  evidence_builder.py  query_plan.py  query_understanding.py  response_generator.py  retrieval_planner.py  verifier.py
services/api/app/db/: __init__.py  migrator.py  models.py  session.py
services/api/app/integrations/: __init__.py  openclaw_sync.py
services/api/app/pipeline/: __init__.py  media_utils.py  runner.py  steps.py  types.py  utils.py
services/api/migrations/: 001_initial_schema.sql  002_google_photos_tokens.sql  002_ingestion_core.sql  003_dedup_canonical.sql  004_ai_usage_events.sql  005_memory_graph_chat.sql  006_chat_attachments.sql  007_timeline_indexes.sql  008_timeline_highlights.sql  009_user_settings.sql  010_devices.sql  011_api_keys.sql  012_processed_context_time_indexes.sql  013_processed_contexts_fts.sql
services/api/scripts/: demo_batch_ingest.py  k6_chat.js  migrate_supabase_to_rustfs.py  pexels_download_demo.py  pexels_prune_manifest.py  seed_ingest_flow.py
services/api/tests/: conftest.py  helpers.py  test_dashboard.py  test_device_tokens.py  test_health.py  test_pipeline_utils.py  test_process_item.py  test_rag_parsing.py  test_recaps.py  test_search_routes.py  test_settings_routes.py  test_timeline.py  test_upload_batch.py
(+132 files in other folders)
