[project]
name = "lifelog-api"
version = "0.1.0"
description = "Lifelog MVP API service"
authors = [{ name = "Lifelog" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi~=0.112",
  "uvicorn[standard]~=0.30",
  "pydantic~=2.7",
  "pydantic-settings~=2.4",
  "redis~=5.0",
  "celery[redis]~=5.3",
  "qdrant-client~=1.7",
  "httpx~=0.27",
  "prometheus-client~=0.20",
  "python-multipart~=0.0.9",
  "orjson~=3.10",
  "loguru~=0.7",
  "supabase~=2.4",
  "sqlalchemy[asyncio]~=2.0",
  "asyncpg~=0.29"
]

[project.optional-dependencies]
dev = ["pytest~=8.2", "ruff~=0.5", "mypy~=1.10"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

